# terra-cw20-tax

./: .gitignore  Cargo.toml  deploy.sh  init.sh  mint.sh  optimize.sh  transfer.sh
examples/: schema.rs
src/: contract.rs
